// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bagger compiler A request can be included 1`] = `
{
  "components": {
    "schemas": {},
    "securitySchemes": {},
  },
  "info": {
    "description": "Provides resources related to building swagger definitions",
    "title": "Bagger API",
    "version": "v1",
  },
  "openapi": "3.0.0",
  "paths": {
    "/bags": {
      "get": {
        "responses": {
          "200": {
            "description": "Good fetch",
          },
        },
        "tags": [
          "bags",
          "users",
        ],
      },
    },
  },
}
`;

exports[`Bagger compiler Add a request and get the schema 1`] = `
{
  "components": {
    "schemas": {},
    "securitySchemes": {},
  },
  "info": {
    "description": "Provides resources related to building swagger definitions",
    "title": "Bagger API",
    "version": "v1",
  },
  "openapi": "3.0.0",
  "paths": {
    "/bags": {
      "get": {
        "responses": {
          "200": {
            "description": "Good fetch",
          },
        },
        "tags": [
          "bags",
          "users",
        ],
      },
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "bagType": {
                    "enum": [
                      "backpack",
                      "sportsbag",
                    ],
                    "type": "string",
                  },
                },
                "required": [
                  "bagType",
                ],
                "type": "object",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "description": "Bought a bag!",
          },
        },
        "tags": [
          "bags",
        ],
      },
    },
  },
}
`;

exports[`Bagger compiler An empty definition should compile 1`] = `
{
  "components": {
    "schemas": {},
    "securitySchemes": {},
  },
  "info": {
    "description": "Provides resources related to building swagger definitions",
    "title": "Bagger API",
    "version": "v1",
  },
  "openapi": "3.0.0",
  "paths": {},
}
`;
